# auto-commit-bot

./: .dev_activity_log  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  auto_commit.py  banner.txt  cli.py  commit_messages.py  config.json  prg.py  pyproject.toml  requirements.txt  setup.py  setup_repos.py  tech_stack_analysis.md
autocommitbot/: CHANGELOG.md  auto_commit.py  changelog.py  cli.py  config.json  gh_auth.py  history.json  paths.py  scheduler.py  setup_repos.py
autocommitbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
