[project]
name = "autocommitbot"
version = "1.0.1"
description = "Automatic GitHub commit bot that logs developer activity."
authors = [{name="Rohit"}]

dependencies = [
    "typer",
    "rich",
    "requests",
    "gitpython"
]

[project.scripts]
autocommit = "autocommitbot.cli:app"

[tool.setuptools.packages.find]
where = ["."]