[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "autocommitbot"
version = "1.2.2"
description = "Automatic GitHub commit bot that logs developer activity."
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "Rohit" }
]

dependencies = [
    "typer",
    "rich",
    "requests",
    "gitpython",
    "questionary",
    "pyfiglet"
]


[project.scripts]
autocommit = "autocommitbot.cli:app"


[tool.setuptools.packages.find]
where = ["."]